--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <body class="font-manrope">
     <header class="container mx-auto">
-        <div class="my-20 px-10">
-            <div class="flex justify-between flex-col lg:flex-row">
+        <div class="my-20 px-8">
+            <div class="flex justify-between gap-4 flex-col lg:flex-row">
                 <div>
                     <h1 class="text-7xl font-extrabold text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House</h1>
                     <p class="py-6 font-medium text-lg text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
@@ -43,19 +43,62 @@
                 </div>
                 <div>
                     <img src="images/banner.png" alt="">
-                    <div class="-mt-20 flex items-center gap-4 drop-shadow-lg bg-white p-4 w-60">
+                    <div class="-mt-20 flex items-center gap-4 rounded-md drop-shadow-lg bg-white p-4 w-60">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
                         <div>
-                            <h3 class="text-3xl">5.00</h3>
-                            <p>Trust Pilot Ratings</p>
+                            <h3 class="text-3xl font-extrabold">5.00</h3>
+                            <p class="text-semibold text-[#777777]]">Trust Pilot Ratings</p>
                         </div>
                     </div>
                 </div>
         </div>
         </div>
     </header>
-    <main>
 
+    <main class="container mx-auto">
+        <section class="text-center my-24">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="lg:max-w-4xl mb-10 mx-auto font-medium">There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                look even slightly believable. </p>
+
+            <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 px-6">
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-semibold">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/tea-2.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                        <h2 class="text-2xl font-bold">Black Tea</h2>
+                        <p class="text-semibold">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                        <h2 class="text-2xl font-bold">Lemon Tea</h2>
+                        <p class="text-semibold">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                        <h2 class="text-2xl font-bold">Green Tea</h2>
+                        <p class="text-semibold">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section></section>
+        <section></section>
+        <section></section>
     </main>
     <footer>
 
