--- a/index.html
+++ b/index.html
@@ -98,7 +98,62 @@
         </section>
         <section></section>
         <section></section>
-        <section></section>
+        <section class="my-24">
+            <div class="text-center">
+                <h2 class="text-5xl font-extrabold mb-5">News & Events</h2>
+                <p class="lg:max-w-4xl mb-10 mx-auto font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <div class="card shadow-xl">
+                    <figure class="px-4 pt-10">
+                        <img
+                        src="images/news-1.png"
+                        alt=""
+                        class="w-full rounded-xl" />
+                    </figure>
+                    <div class="card-body space-y-2 text-start">
+                        <p class="font-medium text-[#777777]">Feb 05, 2027</p>
+                        <h2 class="text-[#1C1C1C] text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                        <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                        <button class="font-bold text-[#1C1C1C]"><a href="#">Learn More</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card shadow-xl">
+                    <figure class="px-4 pt-10">
+                        <img
+                        src="images/news-2.png"
+                        alt=""
+                        class="w-full rounded-xl" />
+                    </figure>
+                    <div class="card-body space-y-2 text-start">
+                        <p class="font-medium text-[#777777]">Feb 05, 2027</p>
+                        <h2 class="text-[#1C1C1C] text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                        <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                        <button class="font-bold text-[#1C1C1C]"><a href="#">Learn More</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card shadow-xl">
+                    <figure class="px-4 pt-10">
+                        <img
+                        src="images/news-3.png"
+                        alt=""
+                        class="w-full rounded-xl" />
+                    </figure>
+                    <div class="card-body space-y-2 text-start">
+                        <p class="font-medium text-[#777777]">Feb 05, 2027</p>
+                        <h2 class="text-[#1C1C1C] text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
+                        <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
+                        <div class="card-actions">
+                        <button class="font-bold text-[#1C1C1C]"><a href="#">Learn More</a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
