--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2dad74e488.js" crossorigin="anonymous"></script>
-    
+
     <script>
         tailwind.config = {
             theme: {
@@ -28,7 +28,7 @@
     <style>
         .font-manrope {
             font-family: "Manrope", sans-serif;
-            }
+        }
     </style>
 </head>
 
@@ -37,9 +37,13 @@
         <div class="my-20 px-8">
             <div class="flex justify-between gap-4 flex-col lg:flex-row">
                 <div>
-                    <h1 class="text-7xl font-extrabold text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House</h1>
-                    <p class="py-6 font-medium text-lg text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
-                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Explore More <i class="fa-solid fa-arrow-trend-up"></i></button>
+                    <h1 class="text-7xl font-extrabold text-[#1C1C1C]">It's good <br> tea time at The <br> Tea House
+                    </h1>
+                    <p class="py-6 font-medium text-lg text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum
+                        <br> Satisfaction To Your Taste Buds.
+                    </p>
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Explore More <i
+                            class="fa-solid fa-arrow-trend-up"></i></button>
                 </div>
                 <div>
                     <img src="images/banner.png" alt="">
@@ -51,14 +55,15 @@
                         </div>
                     </div>
                 </div>
-        </div>
+            </div>
         </div>
     </header>
 
     <main class="container mx-auto">
         <section class="text-center my-24">
             <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
-            <p class="lg:max-w-4xl mb-10 mx-auto font-medium">There are many variations of passages of Lorem Ipsum available, but
+            <p class="lg:max-w-4xl mb-10 mx-auto font-medium">There are many variations of passages of Lorem Ipsum
+                available, but
                 the majority have suffered alteration in some form, by injected humour, or randomised words which don't
                 look even slightly believable. </p>
 
@@ -78,7 +83,7 @@
                         <p class="text-semibold">Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
-                
+
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
@@ -96,59 +101,82 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section class="my-24">
+            <div class="flex gap-12 flex-col lg:flex-row px-4">
+                <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+                    <div class="rounded-xl h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+                    <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex items-center justify-center">
+                        <img src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="row-span-2 bg-[#5776391A] rounded-lg px-8 py-12 flex items-center justify-center">
+                        <img src="images/fresh-2.png" alt="">
+                    </div>
+                    <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF]"></div>
+                </div>
+                <div class="space-y-5 flex-1">
+                    <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br>
+                        Presented</h3>
+                    <p>
+                        The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions .
+                        It
+                        represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
+                        deeply
+                        appreciated by its custoers because of good words of mouth and unique customized service
+                        orginated
+                        from Taiwan.
+                    </p>
+                    <h4 class="text-xl font-extrabold">Unique Taste</h4>
+                    <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
+                    <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section class="my-24">
             <div class="text-center">
                 <h2 class="text-5xl font-extrabold mb-5">News & Events</h2>
-                <p class="lg:max-w-4xl mb-10 mx-auto font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <p class="lg:max-w-4xl mb-10 mx-auto font-medium">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
             </div>
             <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                 <div class="card shadow-xl">
                     <figure class="px-4 pt-10">
-                        <img
-                        src="images/news-1.png"
-                        alt=""
-                        class="w-full rounded-xl" />
+                        <img src="images/news-1.png" alt="" class="w-full rounded-xl" />
                     </figure>
                     <div class="card-body space-y-2 text-start">
                         <p class="font-medium text-[#777777]">Feb 05, 2027</p>
                         <h2 class="text-[#1C1C1C] text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
                         <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
                         <div class="card-actions">
-                        <button class="font-bold text-[#1C1C1C]"><a href="#">Learn More</a></button>
+                            <button class="font-bold text-[#1C1C1C]"><a href="#">Learn More</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="card shadow-xl">
                     <figure class="px-4 pt-10">
-                        <img
-                        src="images/news-2.png"
-                        alt=""
-                        class="w-full rounded-xl" />
+                        <img src="images/news-2.png" alt="" class="w-full rounded-xl" />
                     </figure>
                     <div class="card-body space-y-2 text-start">
                         <p class="font-medium text-[#777777]">Feb 05, 2027</p>
                         <h2 class="text-[#1C1C1C] text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
                         <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
                         <div class="card-actions">
-                        <button class="font-bold text-[#1C1C1C]"><a href="#">Learn More</a></button>
+                            <button class="font-bold text-[#1C1C1C]"><a href="#">Learn More</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="card shadow-xl">
                     <figure class="px-4 pt-10">
-                        <img
-                        src="images/news-3.png"
-                        alt=""
-                        class="w-full rounded-xl" />
+                        <img src="images/news-3.png" alt="" class="w-full rounded-xl" />
                     </figure>
                     <div class="card-body space-y-2 text-start">
                         <p class="font-medium text-[#777777]">Feb 05, 2027</p>
                         <h2 class="text-[#1C1C1C] text-xl font-extrabold">Collecting 8 points for <br> discount</h2>
                         <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available.</p>
                         <div class="card-actions">
-                        <button class="font-bold text-[#1C1C1C]"><a href="#">Learn More</a></button>
+                            <button class="font-bold text-[#1C1C1C]"><a href="#">Learn More</a></button>
                         </div>
                     </div>
                 </div>
@@ -159,4 +187,5 @@
 
     </footer>
 </body>
+
 </html>
