--- a/index.html
+++ b/index.html
@@ -245,8 +245,59 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="px-4 lg:px-48 py-10 bg-gradient-to-r from-red-100 to-red-0 text-base-content">
+        <div class="flex justify-between my-24">
+            <img src="images/cup.png" alt="">
+            <div class="flex items-center justify-around gap-10">
+                <p>Ready to get started?</p>
+                <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get Started</button>
+            </div>
+        </div>
+        <div class="footer">
+            <div>
+                <span class="footer-title">Quick Links</span>
+                <a class="link link-hover">Home</a>
+                <a class="link link-hover">About Us</a>
+                <a class="link link-hover">Insurance</a>
+                <a class="link link-hover">Private Policy</a>
+            </div>
+            <div>
+                <span class="footer-title">Our Service</span>
+                <a class="link link-hover">Life Insurance</a>
+                <a class="link link-hover">Car Insurance</a>
+                <a class="link link-hover">Health Insurance</a>
+                <a class="link link-hover">House Insurance</a>
+            </div>
+            <div>
+                <span class="footer-title">Help</span>
+                <a class="link link-hover">FAQs</a>
+                <a class="link link-hover">Contact Us</a>
+            </div>
+            <div>
+                <span class="footer-title">Subscribe to our newsletter</span>
+                <div class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Email address</span>
+                    </label>
+                    <div class="relative">
+                        <input type="text" placeholder="username@site.com"
+                            class="py-4 bg-transparent border-b-2 border-black outline-none" />
+                        <button
+                            class="btn text-white absolute top-0 right-0 rounded-full bg-gradient-to-r from-gradient-start to-gradient-end">
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="flex gap-4 my-4">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+            </div>
+        </div>
+        <div class="mt-10 text-center">
+            <p>© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
     </footer>
 </body>
 
